# http-server

./: .gitignore  CMakeLists.txt  PostmanCollection.json  README.md  tcp-server.c  tcp-server.cpp
apps/: CMakeLists.txt  app.cpp  building-system-json-example.cpp  employees.cpp  json-hierarchical-example.cpp
docs/: CMakeLists.txt  Doxyfile.in  Untitled.mdj
docs/html/: BadRequest_8h_source.html  BsdSocket__HttpRequestReader_8h_source.html  CatchOCTestCase_8h_source.html  ClientError_8h_source.html  ComponentFactory_8h_source.html  Component_8h_source.html  Composite_8h_source.html  Conflict_8h_source.html  Employee_8h_source.html  Equipment_8h_source.html  Exceptions_8h_source.html  Gone_8h_source.html  Hierarchy_8h_source.html  HttpAdapter_8h_source.html  HttpException_8h_source.html  HttpMessage_8h_source.html  HttpParser_8h.html  HttpParser_8h_source.html  HttpRequestReader_8h_source.html  HttpRequest_8h.html  HttpRequest_8h_source.html  HttpResponseBuilder_8h_source.html  HttpResponse_8h_source.html  HttpStatusCodes_8h_source.html  Message_8h_source.html  NotFound_8h_source.html  RequestParser_8h_source.html  Request_8h_source.html  ResponseBuilder_8h_source.html  Response_8h_source.html  Room_8h_source.html  SocketReader_8h_source.html  StatusCodes_8h_source.html  TestObj_8h_source.html  ThreadsafeFacade_8h_source.html  annotated.html  catch__approx_8h_source.html  catch__assertionhandler_8h_source.html  catch__assertioninfo_8h_source.html  catch__assertionresult_8h_source.html  (+809 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_e.js  defines_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+11 more)
docs/model/contents/: diagrams.html  element_index.html  navigation.html
http/: HttpParser.cpp  HttpParser.h  HttpRequest.cpp
include/BuildingSystem/: Exceptions.h  HttpAdapter.h  ThreadsafeFacade.h
include/BuildingSystem/CompositePattern/: Component.h  Composite.h  Room.h
include/HttpServer/: BsdSocket_HttpRequestReader.h  HttpMessage.h  HttpParser.h  HttpRequest.h  HttpResponse.h  HttpResponseBuilder.h  HttpStatusCodes.h  Message.h  Request.h  RequestParser.h  Response.h  ResponseBuilder.h  SocketReader.h  StatusCodes.h  tcp-server.h
include/http-server/: tcp-server.h
include/http-server/Building/: BuildingAdmin.h  BuildingComponent.h  BuildingComposite.h  BuildingFactory.h  BuildingSystem.h  BuildingVisitor.cpp  BuildingVisitor.h  Equipment.h  Exceptions.h  HttpAdapter.h  Room.h  ThreadsafeFacade.h
include/http-server/Building/CompositePattern/: Component.h  Composite.h  Room.h
include/http-server/BuildingSystem/: Exceptions.h  HttpAdapter.h  ThreadsafeFacade.h
include/http-server/BuildingSystem/CompositePattern/: Component.h  ComponentFactory.h  Composite.h  Equipment.h  Room.h
include/http-server/bsd/: BsdSocket_HttpRequestReader.h
include/http-server/building/: BuildingComponent.h  BuildingComposite.h  BuildingFactory.h  Room.h
include/http-server/employee-manager/: Employee.h  Hierarchy.h
include/http-server/http/: HttpMessage.h  HttpParser.h  HttpRequest.h  HttpRequestReader.h  HttpResponse.h  HttpResponseBuilder.h  HttpResponser.h
include/http-server/http/exceptions/: HttpException.h
include/http-server/http/exceptions/client-errors/: BadRequest.h  ClientError.h  Conflict.h  Gone.h  NotFound.h
include/http-server/worker/: Worker.h  WorkerComponent.h  WorkerComposite.h  WorkingFactory.h
python/: retrieve_doc_from_build.py
src/: CMakeLists.txt  tcp-server.cpp
src/Building/: BuildingAdmin.cpp  BuildingComponent.cpp  BuildingComposite.cpp  BuildingFactory.cpp  BuildingSystem.cpp  BuildingVisitor.cpp  Equipment.cpp  HttpAdapter.cpp  Room.cpp  ThreadsafeFacade.cpp
src/Building/CompositePattern/: Component.cpp  ComponentFactory.cpp  Composite.cpp  Room.cpp
src/BuildingSystem/: HttpAdapter.cpp  ThreadsafeFacade.cpp
src/BuildingSystem/CompositePattern/: Component.cpp  ComponentFactory.cpp  Composite.cpp  Equipment.cpp  Room.cpp
src/HttpServer/: BsdSocket_HttpRequestReader.cpp  HttpMessage.cpp  HttpParser.cpp  HttpRequest.cpp  HttpRequestReader.cpp  HttpResponse.cpp  HttpResponseBuilder.cpp  Message.cpp  Request.cpp  RequestParser.cpp  Response.cpp  ResponseBuilder.cpp  SocketReader.cpp  tcp-server.cpp
src/bsd/: BsdSocket_HttpRequestReader.cpp
src/building/: BuildingComponent.cpp  BuildingComposite.cpp  BuildingFactory.cpp  Room.cpp
src/employee-manager/: Employee.cpp  Hierarchy.cpp
src/http/: HttpMessage.cpp  HttpParser.cpp  HttpRequest.cpp  HttpRequestReader.cpp  HttpResponse.cpp  HttpResponseBuilder.cpp  HttpResponser.cpp
src/worker/: Worker.cpp  WorkerComponent.cpp  WorkerComposite.cpp  WorkingFactory.cpp
tests/: CMakeLists.txt  testlib.cpp
